fix: layout issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -229,13 +229,22 @@ nav a:active {
     flex-direction: column;
     gap: 24px;
     width: fit-content;
+    max-width: 322px;
     padding: 16px;
     border-radius: 16px;
     box-shadow: 0px 0px 32px -8px rgba(50, 48, 48, 0.16);
+    width: 322px;
+}
+
+.card-image img {
+    width: 100%;
+    height: auto;
+    border-radius: 8px;
 }
 
 .card-title {
     font-size: 20px;
+    margin-top: 16px;
 }
 
 .card-footer {
